--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,7 +10,8 @@
     "react-dom": "^16.13.1",
     "react-google-login": "^5.1.22",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-sidebar": "^3.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
