--- a/front-end/package.json
+++ b/front-end/package.json
@@ -7,11 +7,11 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
+    "react-burger-menu": "^2.7.1",
     "react-dom": "^16.13.1",
     "react-google-login": "^5.1.22",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
-    "react-sidebar": "^3.0.2"
+    "react-scripts": "3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
