--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
   },
@@ -17,5 +19,6 @@
     "mongoose": "^5.10.7",
     "nodemon": "^2.0.4",
     "uuid": "^8.3.1"
-  }
+  },
+  "devDependencies": {}
 }
